--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "NLDatabase"]
 	path = NLDatabase
 	url = https://github.com/catnapgames/NLDatabase
+[submodule "QtAwesome"]
+	path = QtAwesome
+	url = https://github.com/gamecreature/QtAwesome
